--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Source+Sans+Pro:400,700&amp;subset=korean">
     <title>KidsLoop Pass</title>
 </head>
 
-<body>
-    <div id="app"></div>
+<body id="body" style="height: 100%; min-width: 320px; margin: 0;">
+    <div id="app" style="min-height: 100%; display: flex; flex-direction: column;"></div>
 </body>
 
 </html>
