--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,8 +9,17 @@
     <title>KidsLoop Pass</title>
 </head>
 
-<body id="body" style="height: 100%; min-width: 320px; margin: 0;">
-    <div id="app" style="min-height: 100%; display: flex; flex-direction: column;"></div>
+<style>
+    html,
+    body {
+        min-height: 100%;
+        min-width: 320px;
+    }
+</style>
+
+
+<body id="body">
+    <main id="app" />
 </body>
 
 </html>
