--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Source+Sans+Pro:400,700&amp;subset=korean">
+        href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Open+Sans:400,700&amp;subset=korean">
     <title>KidsLoop Pass</title>
 </head>
 
@@ -20,7 +20,7 @@
 
 
 <body id="body">
-    <main id="app" />
+    <div id="app" />
 </body>
 
 </html>
