--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Open+Sans:400,700&amp;subset=korean">
-    <title>KidsLoop Pass</title>
+    <title>Badanamu Learning Pass</title>
 </head>
 
 <style>
