--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,9 +12,16 @@
 <style>
     html,
     body {
+        display: flex;
+        flex-direction: column;
         min-height: 100%;
         min-width: 320px;
-        background-color: white !important;
+    }
+
+    div#app {
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
     }
 </style>
 
