--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,8 +20,8 @@
 
     div#app {
         display: flex;
+        flex-grow: 1;
         flex-direction: column;
-        min-height: 100%;
     }
 </style>
 
