--- a/client/src/index.html
+++ b/client/src/index.html
@@ -16,6 +16,7 @@
         flex-direction: column;
         min-height: 100%;
         min-width: 320px;
+        padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
 
     div#app {
