--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Open+Sans:400,700&amp;subset=korean">
+    <script
+        src="https://www.paypal.com/sdk/js?client-id=AeXq4HrXn-XALAQUrV8fj52OCcieKbKKKX52BwftvylJ-X2I8sX9fGtICqesPdfM8A9rl_nuedKJGsko">
+        </script>
     <title>Badanamu Learning Pass</title>
 </head>
 
