--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-    <meta name="author" content="Calm Island Limited">
+    <meta name="author" content="Kidsloop Limited">
     <meta name="description"
         content="Access our entire family of learning apps with the Badanamu Learning Pass today! Unlock 20+* learning applications and 5,000+ minutes of English education for your young learner.">
     <link rel="stylesheet"
